# artifacts/api-server/src/routes/music/index.ts
@@ -6,6 +6,7 @@ import tracksRouter from "./tracks";
 import genresRouter from "./genres";
 import browseRouter from "./browse";
 import searchRouter from "./search";
+import playlistsRouter from "./playlists";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(tracksRouter);
 router.use(genresRouter);
 router.use(browseRouter);
 router.use(searchRouter);
+router.use(playlistsRouter);
 
 export default router;
